@@ -1,3 +1,8 @@
+2008-01-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclIO.c (TclGetsObjBinary): operate on topmost channel.
+	[Bug 1869405] (Ficicchia)
+
 2008-01-17  Don Porter	<dgp@users.sourceforge.net>
 
 	* generic/tclCompExpr.c:	Revision to preserve parsed intreps
